--- a/templates/output.html
+++ b/templates/output.html
@@ -34,7 +34,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css">		<l
 					<div class="media">
 						<div class="is-size-4 has-text-centered">{{ variety}}</div>
 					</div>
-					<form action="home">
+					<form action="/">
 						<div class="field">
 							<button class="button is-fullwidth is-rounded is-success">Retry</button>
 						</div>
